changes in funtionality, changed layout, fixed not covered errors

--- a/src/components/Joke/joke.css
+++ b/src/components/Joke/joke.css
@@ -30,6 +30,8 @@ input {
 .button {
   padding: 12px 20px;
   margin: 8px 30px 0 0;
-  background-color: rgb(0, 0, 0);
-  color: ghostwhite;
+  background-color: rgb(205, 224, 35);
+  color: rgb(109, 105, 82);
+  font-weight: 700;
+  font-family: 'Lucida Grande', Verdana, sans-serif;
 }
